--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
         applicationId "kg.gazprom.signer"
         minSdk 21
         targetSdk 33
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.0.2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -35,6 +35,7 @@ android {
 dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.9.1'
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
+    implementation 'com.github.gcacace:signature-pad:1.3.1'
     implementation 'com.itextpdf:itext7-core:7.1.15'
     implementation 'org.apache.pdfbox:pdfbox:2.0.27'
 //    implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
